# mcp-docs-toolkit

./: .gitignore  AGENTS.md  CODEX_INSTRUCTIONS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: codex-oss-application.md  github-release-checklist.md  multi-backend-plan.md  open-source-sanitization.md  security.md
examples/: .env.example  __init__.py  mock_api_contract.md  mock_server.py
examples/codex-skill-template/: SKILL.md
src/mcp_docs_toolkit/: __init__.py  auth.py  cli.py  client.py  config.py  errors.py  mock_data.py  mock_transport.py  models.py  output.py  redaction.py
src/mcp_docs_toolkit/adapters/: __init__.py  base.py  pagination.py  registry.py
src/mcp_docs_toolkit/adapters/confluence/: __init__.py  adapter.py  config.py  mock.py
src/mcp_docs_toolkit/adapters/google_drive/: __init__.py  adapter.py  config.py  mock.py
src/mcp_docs_toolkit/adapters/keycloak/: __init__.py  _auth.py  _client.py  _config_compat.py  _mock_transport.py  adapter.py  auth.py  config.py  mock.py
src/mcp_docs_toolkit/adapters/notion/: __init__.py  adapter.py  config.py  mock.py
tests/: test_adapters_confluence.py  test_adapters_google_drive.py  test_adapters_notion.py  test_adapters_registry.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_keycloak_compat.py  test_mock_server.py  test_mock_transport.py  test_models.py  test_output.py  test_package_metadata.py  test_packaging_docs.py  test_skill_template.py
